Added Samba dependencies
It retrieves share info from Samba.

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,9 @@ Standards-Version: 3.9.4
 
 Package: wsdd2
 Architecture: any
-Depends: ${misc:Depends},
+Depends: samba-common,
+         samba-common-bin,
+         ${misc:Depends},
          ${shlibs:Depends}
 Description: Web Services for Devices (WSD) daemon
  Web Services for Devices or Web Services on Devices (WSD), is a
