Update systemd service file, now using DynmicUser

--- a/wsdd2.service
+++ b/wsdd2.service
@@ -3,7 +3,7 @@ Description=WSD/LLMNR Discovery/Name Service Daemon
 PartOf=smb.service
 
 [Service]
-User=nobody
+DynamicUser=true
 PrivateTmp=true
 PrivateDevices=true
 ProtectSystem=strict
